Fixed responsive design for cart items on small screens.

--- a/Usuario/carrito/carrito.css
+++ b/Usuario/carrito/carrito.css
@@ -278,8 +278,8 @@ main {
 }
 
 @media screen and (max-width: 400px) {
-    .item-info{
-        display: none;
+    .cart-item{
+        flex-direction: column;
     }
 }
 
